<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    tools:context="com.yupi.home.panikerapp.ui.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/layout_sign_up"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/language"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/color_milk"
                    android:id="@+id/chooseLanguage"
                    android:alpha="0.7"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/chooseLanguage"
                    android:src="@drawable/ic_keyboard_arrow_down_white_24dp"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/layout_sign_up"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/logo"
                android:scaleType="fitCenter"
                android:src="@drawable/paniker_logo"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/textLogo"
                android:scaleType="fitCenter"
                android:src="@drawable/paniker"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_margin="@dimen/first_layout"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_name"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/first_layout"
                    android:textColorHint="@color/color_milk"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:paddingBottom="20dp"
                        app:backgroundTint="@color/color_milk"
                        android:hint="@string/full_name" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:textColorHint="@color/color_milk"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_milk"
                        app:backgroundTint="@color/color_milk"
                        android:maxLines="1"
                        android:paddingBottom="10dp"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email_adress" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:textColorHint="@color/color_milk"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:paddingBottom="20dp"
                        app:backgroundTint="@color/color_milk"
                        android:hint="@string/password" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_phoneNumber"
                    android:layout_width="match_parent"
                    android:textColorHint="@color/color_milk"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/input_phoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:paddingBottom="20dp"
                        app:backgroundTint="@color/color_milk"
                        android:hint="@string/phone_number" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_gender"
                    android:layout_width="match_parent"
                    android:textColorHint="@color/color_milk"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/input_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:paddingBottom="20dp"
                        android:drawableRight="@drawable/ic_arrow_drop_down_white_24dp"
                        app:backgroundTint="@color/color_milk"
                        android:hint="@string/gender" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/first_layout"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/first_layout"
                android:layout_marginRight="@dimen/first_layout"
                android:background="@drawable/transparent_button_background"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textAllCaps="false"
                android:textColor="@color/color_milk"
                android:padding="15dp"
                android:onClick="signUpFinish"
                android:text="@string/sign_up"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_margin="@dimen/first_layout"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="@color/color_milk"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="OR"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/color_milk"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/color_milk"/>
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/first_layout"
                android:layout_marginRight="@dimen/first_layout"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:background="@color/color_milk"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_red_dark"
                android:padding="15dp"
                android:text="@string/sign_in"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
</ScrollView>