<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/pink"
    android:layout_height="match_parent">
    <include layout="@layout/below_toolbar_layout"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="@dimen/profile_margin"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/layout_sign_up"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="DEVICE NAME"
                android:id="@+id/camera"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:id="@+id/camerasDivider"
                android:layout_marginTop="@dimen/layout_sign_up"
                android:layout_below="@+id/camera"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/camerasDivider"
                android:id="@+id/storeData"
                android:layout_marginTop="@dimen/layout_sign_up"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/store_data"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:layout_weight="3"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:id="@+id/storeDataDivider"
                android:layout_marginTop="@dimen/layout_sign_up"
                android:layout_below="@+id/storeData"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/storeDataDivider"
                android:id="@+id/day_week"
                android:layout_marginTop="@dimen/first_layout"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/record"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:layout_weight="3"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/day_week"
                android:id="@+id/record_s_m"
                android:layout_marginTop="@dimen/layout_sign_up"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/record_s_m"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:layout_weight="3"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/record_s_m"
                android:id="@+id/recordBtnPressed"
                android:layout_marginTop="@dimen/layout_sign_up"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/paniker_button_pressed"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:layout_weight="3"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recordBtnPressed"
                android:id="@+id/record_manually"
                android:layout_marginTop="@dimen/layout_sign_up"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/record_manually"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:layout_weight="3"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_below="@+id/record_manually"
                android:layout_margin="@dimen/first_layout"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/background_red"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="DISCONNECT"
                    android:layout_marginRight="@dimen/first_layout"
                    android:textStyle="bold"
                    android:layout_toLeftOf="@+id/save"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="SAVE"
                    android:textStyle="bold"
                    android:layout_alignParentRight="true"
                    android:id="@+id/save" />
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>